comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
    <main>
     <header>
-        <h1>Titulo do Site</h1>
+        <h1>Cursos grátis</h1>
     </header>
     <article>
-        <h2>Artigo 001</h2>
-        <p>Texto artigo 001</p>
+        <h2>Curso de HTML5 e CSS3</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil qui illo vitae sint eaque, officia tempora atque porro in blanditiis deleniti possimus dolores dicta ex ipsam repellendus expedita quidem eius!</p>
     </article>
     <article>
-        <h2>Artigo 002</h2>
-        <p>Texto artigo 002</p>
+        <h2>Curo de Javascript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatem corporis veritatis, id quaerat omnis neque doloremque, aperiam quam perferendis fugiat excepturi ut itaque maiores iusto qui, ea nemo a?</p>
     </article>
    </main> 
 </body>
